fix alignement

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -17,6 +17,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    text-align: center;
 }
 
 .header-content {
